objects/LexisNexis_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>EndPointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTimeOut__c</fullName>
        <label>RequestTimeOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Name__c</fullName>
        <label>Workflow Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>LexisNexis_Integration</label>
</CustomObject>